@@ -1,5 +1,11 @@
 2012-04-03 Dario Rodriguez <dario.rodriguez@artica.es>
 
+	* godmode/menu.php,
+	godmode/tag/tag.php,
+	godmode/tag/edit_tag.php: Moved tag menu inside Manage modules.
+
+2012-04-03 Dario Rodriguez <dario.rodriguez@artica.es>
+
 	* include/functions_menu.php: Deleted extension icon on menus.
 
 	* extensions/extension_uploader.php: Fixed wrong link to menu for this
